# subscrub

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs  ui.rs
src/commands/: download.rs  merge.rs  mod.rs
src/core/: downloader.rs  merger.rs  mod.rs  parser.rs  types.rs  util.rs  writer.rs
